2008-06-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-annotate.el (vc-annotate-mode): Derive from special-mode
	instead of using view-mode.

2008-06-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (distclean): Don't delete *.elc and autogen files.

2008-06-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el:
	* vc-hooks.el:
	* vc-dispatcher.el: Move vc-dir variables and functions ...
	* vc-dir.el: ... here.  New file.
	* Makefile.in (ELCFILES): Add vc-dir.elc.

	* vc.el: Move vc-annotate variables and functions ...
	* vc-annotate.el: ... here.  New file.
	* Makefile.in (ELCFILES): Add vc-annotate.elc.

	* vc-dav.el: Move here from url/vc-dav.el.
	(Todo): Note work needed to make this backend functional.

	* Makefile.in (ELCFILES): Update vc-dav.el location.

2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (COMPILE_FIRST): Trim down and add autoload.el.

2008-06-21  John Paul Wallington  <jpw@pobox.com>

	* emacs-lisp/derived.el (define-derived-mode): Add `doc-string' decl.

	* textmodes/rst.el (rst-mode): Put docstring in right place.

2008-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (fancy-about-text, fancy-startup-tail): Increase text
	size for legibility.

	* faces.el (fixed-pitch): Use "Monospace" family.
	(variable-pitch): Use "Sans" family.
	(face-font-family-alternatives): Define alternatives for "Sans"
	and "Monospace".

2008-06-21  Glenn Morris  <rgm@gnu.org>

	* mail/hashcash.el, net/tramp-smb.el, nxml/nxml-mode.el:
	Require 'cl when compiling.

	* emacs-lisp/debug.el (help-xref-interned): Declare.

	* emacs-lisp/easy-mmode.el (easy-mmode-set-keymap-parents):
	Evaluate definition when compiling.

	* progmodes/bug-reference.el (bug-reference-map): Bind down-mouse-1
	rather than mouse-1.
	(bug-reference-url-format): Autoload safe if string.
	(bug-reference-bug-regexp): Make space after "bug" optional.

	* Makefile.in (all): Explicitly pass EMACS to sub-make,
	for some non-GNU makes.
